--- a/_posts/2018-08-16-linux.md
+++ b/_posts/2018-08-16-linux.md
@@ -16,3 +16,11 @@ tags:
 ```
     pwd
 ```
+
+2. 查看linux系统版本
+```
+    cat /etc/issue
+
+    // CentOS re;ease 6.5(Final)
+    // Kernel \r on an \m
+```
