--- a/_posts/2018-08-24-css-strip.md
+++ b/_posts/2018-08-24-css-strip.md
@@ -4,7 +4,7 @@ title:      css实现条纹效果
 subtitle:   
 date:       2018-8-24
 author:     wengfan
-header-img: img/post-bg-debug.jpg
+header-img: img/post-bg-debug.png
 catalog: true
 tags:
     - css
